[package]
name = "ddust"
version = "0.1.0"
edition = "2024"
authors = ["bubb1es71 <bubb1es71@proton.me>"]
license = "MIT"

[dependencies]
bdk_wallet = "2"
bdk_bitcoind_rpc = "0.22"
bdk_redb = "0.1.1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = "0.3.22"
