[package]
name = "ddust"
version = "0.1.0"
edition = "2024"
authors = ["ddust developers"]
license = "MIT OR Apache-2.0"

[dependencies]
bdk_wallet = "3"
bdk_bitcoind_rpc = "0.22"
bdk_redb = "0.2"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3.22"

[dev-dependencies]
corepc-node = { version = "0.12", features = ["30_2"] }
corepc-client = {  version = "0.12.0", features = ["client-sync"]}
